--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&family=Onest:wght@100&family=Open+Sans&family=Palanquin:wght@300&family=Pixelify+Sans:wght@500;700&family=Quicksand:wght@500&family=Roboto+Mono:wght@700&family=Ubuntu&display=swap" rel="stylesheet">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&family=Onest:wght@100&family=Open+Sans&family=Palanquin:wght@300&family=Pixelify+Sans:wght@500;700&family=Quicksand:wght@500&family=Roboto+Mono:wght@700&family=Ubuntu&display=swap"
+      rel="stylesheet"
+    />
     <link
       href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&family=Onest:wght@100&family=Open+Sans&family=Palanquin:wght@300&family=Pixelify+Sans:wght@500;700&family=Quicksand:wght@500&family=Roboto+Mono:wght@700&family=Ubuntu&display=swap"
       rel="stylesheet"
@@ -17,8 +18,11 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
     />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
+    <link rel="icon" type="image/png" href="src/img/kisspng-morty-smith-amazon-com-computer-mouse-mouse-mats-r-skin-5ac5a606d7a2b8.3034559115229025348833.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rick & Morty API</title>
   </head>
